Fix an issue where x-axis labels could be truncated

--- a/app/assets/stylesheets/blacklight_range_limit/blacklight_range_limit.css
+++ b/app/assets/stylesheets/blacklight_range_limit/blacklight_range_limit.css
@@ -62,4 +62,6 @@ form .range_limit_label {
 
 .range_limit .chart_js {
   min-height: 80px;
+  margin-left: -12px;
+  margin-right: -14px;
 }
